Update colors of bottomnavigation

--- a/TennisTime/app/src/main/res/layout/activity_main.xml
+++ b/TennisTime/app/src/main/res/layout/activity_main.xml
@@ -14,9 +14,9 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:background="@color/colorPrimary"
-        app:itemIconTint="@color/white"
-        app:itemTextColor="@color/white"
+        android:background="@color/middleblue"
+        app:itemIconTint="@color/tennisyellow"
+        app:itemTextColor="@color/tennisyellow"
         app:menu="@menu/bottom_navigation_menu" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
