Add layout fragments and transactions

--- a/TennisTime/app/src/main/res/layout/activity_main.xml
+++ b/TennisTime/app/src/main/res/layout/activity_main.xml
@@ -7,16 +7,22 @@
         android:layout_height="match_parent"
         tools:context=".ui.tabs.MainActivity">
 
-    <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:id="@+id/bottom_navigation"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        android:background="@color/middleblue"
-        app:itemIconTint="@color/tennisyellow"
-        app:itemTextColor="@color/tennisyellow"
-        app:menu="@menu/bottom_navigation_menu" />
+        <FrameLayout
+            android:id="@+id/frame_container"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+        </FrameLayout>
+
+        <com.google.android.material.bottomnavigation.BottomNavigationView
+            android:id="@+id/bottom_navigation"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            android:background="@color/middleblue"
+            app:itemIconTint="@color/tennisyellow"
+            app:itemTextColor="@color/tennisyellow"
+            app:menu="@menu/bottom_navigation_menu" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
