--- a/TennisTime/app/src/main/res/values/colors.xml
+++ b/TennisTime/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
     <color name="colorAccent">#FF4081</color>
     <color name="white">#FFFFFF</color>
     <color name="middleblue">#0D8AFF</color>
+    <color name="darkerblue">#0A67BF</color>
     <color name="tennisyellow">#FFF200</color>
 
 </resources>
