--- a/TennisTime/app/src/main/res/values/styles.xml
+++ b/TennisTime/app/src/main/res/values/styles.xml
@@ -4,7 +4,7 @@
     <style name="AppTheme" parent="Theme.MaterialComponents.Light.DarkActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/middleblue</item>
-        <item name="colorPrimaryDark">@color/middleblue</item>
+        <item name="colorPrimaryDark">@color/darkerblue</item>
         <item name="colorAccent">@color/tennisyellow</item>
         <!-- Removing actionbar -->
         <item name="windowActionBar">false</item>
