--- a/TennisTime/app/src/main/res/layout/fragment_player.xml
+++ b/TennisTime/app/src/main/res/layout/fragment_player.xml
@@ -38,7 +38,8 @@
                 android:id="@+id/tabs"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:tabBackground="@color/middleblue">
+                app:tabBackground="@color/middleblue"
+                app:tabMode="fixed">
 
                 <com.google.android.material.tabs.TabItem
                     android:layout_width="wrap_content"
@@ -52,6 +53,7 @@
         </com.google.android.material.appbar.AppBarLayout>
 
         <androidx.viewpager.widget.ViewPager
+            android:id="@+id/player_viewpager"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             app:layout_behavior="@string/appbar_scrolling_view_behavior"
