--- a/TennisTime/app/src/main/res/values/colors.xml
+++ b/TennisTime/app/src/main/res/values/colors.xml
@@ -7,5 +7,7 @@
     <color name="middleblue">#0D8AFF</color>
     <color name="darkerblue">#0A67BF</color>
     <color name="tennisyellow">#FFF200</color>
-
+    <color name="purple">#9900E8</color>
+    <color name="lightbrown">#FFA30D</color>
+    <color name="brown">#B26F00</color>
 </resources>
