--- a/TennisTime/app/src/main/res/layout/activity_main.xml
+++ b/TennisTime/app/src/main/res/layout/activity_main.xml
@@ -7,22 +7,30 @@
         android:layout_height="match_parent"
         tools:context=".ui.tabs.MainActivity">
 
-        <FrameLayout
-            android:id="@+id/frame_container"
+        <androidx.appcompat.widget.LinearLayoutCompat
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-        </FrameLayout>
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-        <com.google.android.material.bottomnavigation.BottomNavigationView
-            android:id="@+id/bottom_navigation"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            android:background="@color/middleblue"
-            app:itemIconTint="@color/tennisyellow"
-            app:itemTextColor="@color/tennisyellow"
-            app:menu="@menu/bottom_navigation_menu" />
+            <FrameLayout
+                android:id="@+id/frame_container"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1">
+            </FrameLayout>
+
+            <com.google.android.material.bottomnavigation.BottomNavigationView
+                android:id="@+id/bottom_navigation"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom"
+                android:background="@color/middleblue"
+                app:itemIconTint="@color/tennisyellow"
+                app:itemTextColor="@color/tennisyellow"
+                app:menu="@menu/bottom_navigation_menu" />
+
+        </androidx.appcompat.widget.LinearLayoutCompat>
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
