--- a/TennisTime/app/src/main/res/layout/fragment_tennisclubs.xml
+++ b/TennisTime/app/src/main/res/layout/fragment_tennisclubs.xml
@@ -28,7 +28,8 @@
         <androidx.recyclerview.widget.RecyclerView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_margin="8dp">
+            android:layout_margin="8dp"
+            tools:listitem="@layout/fragment_tennisclub_item">
 
         </androidx.recyclerview.widget.RecyclerView>
     </androidx.appcompat.widget.LinearLayoutCompat>
