--- a/TennisTime/app/src/main/res/layout/fragment_tennisclub_item.xml
+++ b/TennisTime/app/src/main/res/layout/fragment_tennisclub_item.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.material.card.MaterialCardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_margin="8dp">
 
     <androidx.appcompat.widget.AppCompatImageButton
@@ -20,7 +20,7 @@
         android:maxLines="3"
         android:textColor="@color/darkerblue"
         style="@style/TextAppearance.MaterialComponents.Headline4"
-
+        android:clickable="false"
         android:text="Tennisclub"/>
 
 </com.google.android.material.card.MaterialCardView>
