--- a/TennisTime/app/src/main/res/values/colors.xml
+++ b/TennisTime/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="purple">#9900E8</color>
     <color name="lightbrown">#FFA30D</color>
     <color name="brown">#B26F00</color>
+    <color name="grey">#BEBEBE</color>
 </resources>
