--- a/TennisTime/app/src/main/res/layout/fragment_match.xml
+++ b/TennisTime/app/src/main/res/layout/fragment_match.xml
@@ -8,7 +8,7 @@
     tools:context=".ui.tennisclubs.TennisclubsFragment">
 
     <com.google.android.material.appbar.AppBarLayout
-        android:id="@+id/tc_appbar"
+        android:id="@+id/match_appbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@android:color/white"
@@ -27,7 +27,7 @@
 
 
             <androidx.appcompat.widget.SearchView
-                android:id="@+id/tc_searchview"
+                android:id="@+id/match_searchview"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:layout_collapseMode="parallax"
@@ -41,7 +41,7 @@
     </com.google.android.material.appbar.AppBarLayout>
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/tennisclubs_recyclerview"
+        android:id="@+id/matches_recyclerview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
