--- a/TennisTime/app/src/main/res/layout/fragment_match_item.xml
+++ b/TennisTime/app/src/main/res/layout/fragment_match_item.xml
@@ -62,7 +62,7 @@
         </FrameLayout>
 
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/match_name_textView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/match_frameLayout"
@@ -78,15 +78,16 @@
             android:textStyle="bold" />
 
         <TextView
+            android:id="@+id/match_ranking_textView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/textView"
+            android:layout_below="@id/match_name_textView"
             android:fontFamily="sans-serif-medium"
             android:paddingBottom="@dimen/activity_vertical_margin"
             android:paddingLeft="@dimen/dimen_24dp"
             android:paddingRight="@dimen/dimen_24dp"
             android:paddingTop="@dimen/dimen_24dp"
-            android:text="ranking"
+            android:text="ranking:"
             android:textColor="@color/grey"
             android:textSize="@dimen/dimen_16sp"
             android:textStyle="italic" />
