--- a/TennisTime/app/src/main/res/layout/fragment_tennisclub_item.xml
+++ b/TennisTime/app/src/main/res/layout/fragment_tennisclub_item.xml
@@ -1,26 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_margin="8dp">
+<layout
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <androidx.appcompat.widget.AppCompatImageButton
-        android:id="@+id/tennisclub_button"
+    <data>
+        <variable
+            name="viewModel"
+            type="com.example.frederikdeprez.tennistime.ui.viewmodels.TennisclubViewModel" />
+    </data>
+
+    <com.google.android.material.card.MaterialCardView
         android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:src="@drawable/tennis_ball_net_background"
-        android:alpha="0.8"/>
-
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/tennisclub_text_view"
-        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center|end"
-        android:maxLines="3"
-        android:textColor="@color/darkerblue"
-        style="@style/TextAppearance.MaterialComponents.Headline4"
-        android:clickable="false"
-        android:text="Tennisclub"/>
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:layout_margin="8dp">
 
-</com.google.android.material.card.MaterialCardView>
+        <androidx.appcompat.widget.AppCompatImageButton
+            android:id="@+id/tennisclub_button"
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:src="@drawable/tennis_ball_net_background"
+            android:alpha="0.8"/>
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/tennisclub_text_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center|end"
+            android:maxLines="3"
+            android:textColor="@color/darkerblue"
+            style="@style/TextAppearance.MaterialComponents.Headline4"
+            android:clickable="false"
+            android:text="@{viewModel.getTennisclubName()}" />
+
+    </com.google.android.material.card.MaterialCardView>
+</layout>
