--- a/TennisTime/app/src/main/res/layout/fragment_tennisclub_item.xml
+++ b/TennisTime/app/src/main/res/layout/fragment_tennisclub_item.xml
@@ -4,11 +4,12 @@
 
     <data>
         <variable
-            name="viewModel"
-            type="com.example.frederikdeprez.tennistime.ui.viewmodels.TennisclubViewModel" />
+            name="tennisclub"
+            type="com.example.frederikdeprez.tennistime.data.Tennisclub" />
     </data>
 
     <com.google.android.material.card.MaterialCardView
+        android:id="@+id/tennisclub_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -30,7 +31,7 @@
             android:textColor="@color/darkerblue"
             style="@style/TextAppearance.MaterialComponents.Headline4"
             android:clickable="false"
-            android:text="@{viewModel.getTennisclubName()}" />
+            android:text="@{tennisclub.name}" />
 
     </com.google.android.material.card.MaterialCardView>
 </layout>
