Update button color for better visibility

--- a/TennisTime/app/src/main/res/values/colors.xml
+++ b/TennisTime/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="lightbrown">#FFA30D</color>
     <color name="brown">#B26F00</color>
     <color name="grey">#BEBEBE</color>
+    <color name="black">#000000</color>
 </resources>
