--- a/TennisTime/app/src/main/res/layout/fragment_match_item.xml
+++ b/TennisTime/app/src/main/res/layout/fragment_match_item.xml
@@ -54,14 +54,14 @@
                         <com.google.android.material.button.MaterialButton
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
-                            android:textColor="@color/white"
+                            android:textColor="@color/black"
                             android:background="@color/middleblue"
                             android:text="@string/call"/>
 
                         <com.google.android.material.button.MaterialButton
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
-                            android:textColor="@color/white"
+                            android:textColor="@color/black"
                             android:background="@color/middleblue"
                             android:text="@string/mail"/>
 
