--- a/TennisTime/app/src/main/res/layout/fragment_match_item.xml
+++ b/TennisTime/app/src/main/res/layout/fragment_match_item.xml
@@ -52,6 +52,7 @@
                         android:visibility="gone">
 
                         <com.google.android.material.button.MaterialButton
+                            android:id="@+id/match_callbutton"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:textColor="@color/black"
@@ -59,6 +60,7 @@
                             android:text="@string/call"/>
 
                         <com.google.android.material.button.MaterialButton
+                            android:id="@+id/match_mailbutton"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:textColor="@color/black"
