Update playercontact layout for two way data binding

--- a/TennisTime/app/src/main/res/values/colors.xml
+++ b/TennisTime/app/src/main/res/values/colors.xml
@@ -12,4 +12,5 @@
     <color name="brown">#B26F00</color>
     <color name="grey">#BEBEBE</color>
     <color name="black">#000000</color>
+    <color name="green">#00E842</color>
 </resources>
