--- a/TennisTime/app/src/main/res/layout/fragment_player_contact.xml
+++ b/TennisTime/app/src/main/res/layout/fragment_player_contact.xml
@@ -55,7 +55,7 @@
                     android:layout_height="wrap_content"
                     android:inputType="numberDecimal"
                     android:text="@={player.tennisclubId}"
-                    android:hint="@string/tennisclub"/>
+                    android:hint="@string/tennisclubID"/>
             </com.google.android.material.textfield.TextInputLayout>
 
             <androidx.appcompat.widget.LinearLayoutCompat
