Update string value with translation #12

--- a/TennisTime/app/src/main/res/layout/fragment_player_date_item.xml
+++ b/TennisTime/app/src/main/res/layout/fragment_player_date_item.xml
@@ -32,7 +32,7 @@
                 android:layout_height="wrap_content"
                 android:gravity="end"
                 android:layout_weight="0.1"
-                android:text="id: " />
+                android:text="@string/id" />
 
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/tennisclubid_text_view"
